Fixing hidden text behind arrows. HTML changes coming from Denys.

--- a/src/assets/scss/_form.scss
+++ b/src/assets/scss/_form.scss
@@ -91,6 +91,8 @@
   select.form-control-subtle {
     display: inline-block !important;
     width: 12%;
+    padding-left: 0;
+    padding-right: 0;
   }
   input[type=name] {
     display: inline-block !important;
